test/functions/deitz/default/test_default3-error.good
test_default3-error.chpl:17: error: ambiguous call 'foo()'
test_default3-error.chpl:1: note: candidates are: foo(i: int, j: real, k: string)
test_default3-error.chpl:5: note:                 foo(i: real, j: string, k: int)
